test/inference/bad/typeclass_use_rw.mle
class RW 'a { read : unit -> 'a; write : 'a -> unit }
let ['a] [ RW 'a ] (r : unit) = ['a] write['a] (read['a] ())